+ test
+ encapsulate ViewLanguageResponseListener and build a main program of this