@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-include_path=0;/ViewLanguageAPI
+include_path=
