@@ -1,0 +1,21 @@
+top start
+
+<?php foreach($a as $b) { ?>
+
+				<?php foreach($b as $c) { ?>
+				<?php echo $c; ?>
+				<?php } ?>
+				
+<?php } ?>
+top end
+header
+body start
+<?php foreach($a as $b) { ?>
+
+				<?php foreach($b as $c) { ?>
+				<?php echo $c; ?>
+				<?php } ?>
+				
+<?php } ?>
+body end
+footer
