@@ -1,0 +1,7 @@
+<import file="header"/>
+body start
+<standard:foreach var="${a}" value="b">
+<test:mine id="${b}"/>
+</standard:foreach>
+body end
+<import file="footer"/>
