@@ -1,0 +1,6 @@
+top start
+
+<standard:foreach var="${a}" value="b">
+<test:mine id="${b}"/>
+</standard:foreach>
+top end
